--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     default: 'Pauline'
 outputs:
   response:
-    description: 'Réponse de l'action"
+    description: "Réponse de l'action"
 runs:
   using: 'node16'
   main: 'index.js'
